# sensor-logger

./: .gitignore  README.md  gradlew  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: defaults.properties
app/src/main/res/drawable/: ic_file_24dp.xml  ic_ftp_24dp.xml  ic_help_24dp.xml  ic_record_24dp.xml  ic_sensors_24dp.xml  ic_streaming_24dp.xml
app/src/main/res/layout/: activity_main.xml  content_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: dimens.xml  strings.xml
app/src/main/res/xml/: pref_capture.xml  pref_file.xml  pref_ftp.xml  pref_headers.xml  pref_help.xml  pref_logging.xml  pref_sensors.xml  pref_streaming.xml
commons-net/src/main/: AndroidManifest.xml
commons-net/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary320/: CMakeLists.txt  build.gradle
openCVLibrary320/src/main/java/org/opencv/android/: StaticHelper.java
python-streaming-client/: play_stream.py  stream_capture.py  stream_client.py  stream_data.py
simple/: build.gradle
simple/src/main/: AndroidManifest.xml
simple/src/main/assets/: defaults.properties
simple/src/main/res/drawable/: btn_rec.xml  ic_record_24dp.xml  ic_stop_24dp.xml
simple/src/main/res/layout/: activity_main.xml
simple/src/main/res/menu/: menu_main.xml
simple/src/main/res/values/: strings.xml  styles.xml
streaming-client/html/: client.html
streaming/src/main/: AndroidManifest.xml
streamingserver/src/main/res/values/: strings.xml
(+51 files in other folders)
